@@ -4,7 +4,8 @@ Changelog
 2.0.7 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Fixed inserting filename in Content-Disposition header.
+  [kroman0]
 
 
 2.0.6 (2014-09-07)
